--- a/app.json
+++ b/app.json
@@ -2,6 +2,10 @@
   "expo": {
     "name": "canvas",
     "slug": "canvas",
-    "version": "1.0.0"
+    "scheme": "canvas",
+    "version": "1.0.0",
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
