--- a/app.json
+++ b/app.json
@@ -4,8 +4,12 @@
     "slug": "canvas",
     "scheme": "canvas",
     "version": "1.0.0",
+    "userInterfaceStyle": "automatic",
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "web": {
+      "bundler": "metro"
+    }
   }
 }
