--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-reanimated": "^3.16.3",
-    "react-native-safe-area-context": "^4.14.0",
+    "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "tailwindcss": "^3.4.15",
     "react-native-svg": "15.8.0",
-    "expo-linear-gradient": "~14.0.1"
+    "expo-linear-gradient": "~14.0.1",
+    "react-native-gesture-handler": "~2.20.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
